# Falcon-lite-Factory

./: .gitignore  CMakeLists.txt  ble.md  build.sh  build_factory.sh  factory_proto.md  main.cpp  readme.md  toolchain.cmake
.claude/: settings.local.json
btwifi/confs/: wps_hostapd_aic.conf
btwifi/scripts/: dragonfly_bt_init.sh  dragonfly_wifi_init.sh
commons/mosquitto/: mosquitto.conf
commons/param/: Makefile  dictionary.h  param.c  param.h
configs/: hall_threshold.ini
firmware/: Dragonfly_lunch_factory.sh  iperf3_server_safe.sh
firmware/stress/: gpu_test  rknn_matmul_api_demo  rwcheck  stress
include/ble/: BleAdvertiser.h  BleConstants.h  BleDeviceInfo.h  BleGattServer.h  BleMqttBridge.h  BleTypes.h  BleUtility.h  BleWifiManager.h
include/common/: ShellUtils.h  Types.h
include/core/: AsyncTaskQueue.h  TestEngine.h
include/hal/: BleAdvertiser.h  FactoryDisplay.h  GpioController.h  HallSwitch.h  I2cController.h  IRecorder.h  ITracker.h  MotorController.h  MotorHal.h  RecorderController.h  RecorderImpl.h  TrackController.h
include/tests/: AgingTest.h  BatteryTest.h  CameraTest.h  HallTest.h  KeyTest.h  MicTest.h  MotorTest.h  RtcTest.h  SocTest.h  SysTest.h  TfCardTest.h  WifiTest.h
lunch/: get_cpuinfo.sh  insmod_spi_motor.sh  power_off.sh  start_mqtt.sh
sdk_patch/: adb_key  app  buildroot  device  external  kernel  kernel_patch  readme  rkbin
sdk_patch/adb_key/: __apply_patch.sh  adbkey  adbkey.pub
sdk_patch/app/: __apply_patch.sh
sdk_patch/app/rkipc/: CMakeLists.txt
sdk_patch/buildroot/: __apply_patch.sh
sdk_patch/buildroot/configs/: rockchip_rv1126b_ipc_defconfig
sdk_patch/device/: __apply_patch.sh
sdk_patch/kernel_patch/: __apply_patch.sh
sdk_patch/kernel_patch/motor_tmi8152/: .Module.symvers.cmd  .modules.order.cmd  .motor_tmi8152.ko.cmd  .motor_tmi8152.mod.cmd  .motor_tmi8152.mod.o.cmd  .motor_tmi8152.o.cmd  .spi_motor_drv.o.cmd  Makefile  modules.order  motor_test.c  motor_tmi8152.ko  motor_tmi8152.mod  motor_tmi8152.mod.c  spi_motor_drv.c  spi_motor_drv.h  spi_motor_test.c  tmi8152.h
sdk_patch/kernel_patch/om70x0x_battery/: .Module.symvers.cmd  .battery.ko.cmd  .battery.mod.cmd  .battery.mod.o.cmd  .battery.o.cmd  .modules.order.cmd  .om70x0x_battery.o.cmd  Makefile  battery.ko  battery.mod  modules.order  om70x0x_battery.c
sdk_patch/rkbin/RKBOOT/: RV1126BMINIALL.ini  RV1126BMINIALL_FASTBOOT.ini  RV1126BMINIALL_IPC.ini  RV1126BMINIALL_IPC_FASTBOOT.ini  RV1126BMINIALL_IPC_TB.ini
sdk_patch/rkbin/tools/: boot_merger  ddrbin_param.txt  ddrbin_tool.py  ddrbin_tool_user_guide.txt  setting.ini  trust_merger
src/ble/: BleAdvertiser.cpp  BleDeviceInfo.cpp  BleGattServer.cpp  BleMqttBridge.cpp  BleUtility.cpp  BleWifiManager.cpp  Makefile  ble_factory_advertise  main.cpp
src/core/: AsyncTaskQueue.cpp  TestEngine.cpp
src/hal/: BleAdvertiser.cpp  FactoryDisplay.cpp  GpioController.cpp  HallSwitch.c  I2cController.cpp  MotorController.cpp  MotorHal.c  MqttRecorder.cpp  NullRecorder.cpp  RecorderController.cpp  TrackController.cpp  log.h
src/tests/: AgingTest.cpp  BatteryTest.cpp  CameraTest.cpp  HallTest.cpp  KeyTest.cpp  MicTest.cpp  MotorTest.cpp  RtcTest.cpp  SocTest.cpp  SysTest.cpp  TfCardTest.cpp  WifiTest.cpp
test/: keys.c  keys_test
tools/: factory_test_runner.cpp  soc_test.cpp
usb_gadget/: init_usb_gadget.sh  test_build_and_dts.sh  test_init_usb_gadget_timeouts.sh  test_usb_gadget_health.sh  test_usb_reconnect.sh  test_usb_reconnect_stuck_fix.sh  usb_config.sh  usb_gadget_health.sh  usb_reconnect.sh
xbotgo_rootfs/etc/: profile  resolv.conf.tail
xbotgo_rootfs/etc/init.d/: S50nginx  (+4 more)
xbotgo_rootfs/sbin/: poweroff
(+29 files in other folders)
